Fix mistakenly allowed pinch zoom

In this demo page: http://output.jsbin.com/koxiyip/quiet, the green box
should allow pan-y only. However, if we use one finger to trigger a
scroll begin + scroll update, and then using the second finger to trigger
a pinch-zoom action, the pinch-zoom will be mistakenly allowed.

The problem is that in our current implementation, when there is a pinch begin
or update event, we don't check whether it should be allowed or not based
ono the currently allowed touch action.

This CL fix the problem and added a new test case to make sure that
pinch-zoom is not allowed.

Bug: 771330
Change-Id: Id9d7ea5706551cf0ec75652ff9beb83601a75782